# sysboost

./: .clang-format-ignore  .gitignore  Cargo.toml  Makefile  README.en.md  README.md  devops-env.sh  meson.build  sysboost.service  sysboostd_exec_stop.sh
.cargo/: config.toml
libs/basic/src/: lib.rs
libs/rustlib/: Cargo.toml
libs/rustlib/src/: logger.rs
profile/: mysql.profile.aarch64.xz  mysql.profile.x86_64.xz  mysql.profile.xz
scripts/: devops-env.sh  sysboost.service
src/: elf_check_elf.c  elf_check_elf.h  elf_ext.h  elf_hugepage.c  elf_hugepage.h  elf_link_common.c  elf_link_common.h  elf_link_elf.c  elf_link_elf.h  elf_read_elf.c  elf_read_elf.h  elf_read_elf_xz.c  elf_relocation.c  elf_relocation_aarch64.c  elf_relocation_x86_64.c  elf_write_elf.c  elf_write_elf.h  main.c  meson.build
src/binfmt_rto/: Makefile  binfmt_rto.c  binfmt_rto.h  binfmt_rto_604.c  loader_device.c  loader_device.h  main.c  main.h  rto_populate.c  rto_populate_604.c
src/elfmerge/: elf_check_elf.c  elf_ext.h  elf_hugepage.c  elf_instruction.c  elf_instruction.h  elf_link_common.c  elf_link_common.h  elf_link_elf.c  elf_link_elf.h  elf_read_elf.c  elf_read_elf.h  elf_read_elf_xz.c  elf_relocation.c  elf_relocation.h  elf_relocation_aarch64.c  elf_relocation_x86_64.c  elf_write_elf.c  elf_write_elf.h  main.c  meson.build
src/libhook/: dlsym_hook.c  meson.build
src/static_template/: meson.build  static_template.c
src/sysboost_loader/: Makefile  binfmt_rto.c  binfmt_rto.h  binfmt_rto_604.c  loader_device.c  loader_device.h  main.c  netlink_kernel.c  netlink_kernel.h  rto_populate.c  rto_populate_604.c
src/sysboostd/: Cargo.toml  aot.rs  bolt.rs  common.rs  config.rs  coredump_monitor.rs  daemon.rs  interface.rs  main.rs  netlink_client.rs
src/sysboostd/lib/: process_ext.rs
sysboost/src/: elf_link_elf.c
tests/: .gitignore  meson.build  test_sysboostd.py  test_sysboostd.rs
tests/bash/: Makefile
tests/test_app/: Makefile  common_func.c  meson.build  test_app.c  util1.c  util2.c
tests/test_binfmt_rto/: .gitignore  Makefile  ls_test_link
tests/test_config/: Makefile  app3.toml
tests/test_coredump/: test.c
tests/test_hugepage/: .gitignore  Makefile  hugepage.x86_64.lds  test_hugepage.c
tests/test_ifunc/: meson.build  test_ifunc.c
tests/test_simple/: Makefile  meson.build  simple_app.c
